--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "lint": "eslint --ext .js,.ts -f visualstudio .",
+    "lint:fix": "npm run lint -- --fix",
+    "lint:ci": "npm run lint:fix -- --quiet",
+    "lint:prettier": "prettier --write '**/*.{ts,js}'",
+    "lint:prettier:check": "prettier --check '**/*.{ts,js}'"
   },
   "dependencies": {
     "@nylas/nylas-js": "^0.1.0"
@@ -13,7 +18,13 @@
   "devDependencies": {
     "typescript": "^4.7.4",
     "react": "^18.2.0",
-    "@types/react": "^18.0.12"
+    "@types/react": "^18.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.30.1",
+    "prettier": "^2.7.1"
   },
   "repository": {
     "type": "git",
