Pre release improvements (#2)
After playing with this and getting some internal feedback, the following changes will be made to improve this wrapper before release:
* Make it more react-y by:
    * Using the term `Properties` instead of `Options`
    * Using the term `Provider` in the class and file name of a `React.Provider` type
    * Set the state in the `useEffect` hook
* Eliminate useless `authState` variable
* Make `useNylas` act as a wrapper of the `nylas-js` package instead of re-defining the functions in the provider
* Safeguard the setting of the client in the provider
* Readme improvements
* Update package.json for publishing the package on npm

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "React SDK for the Nylas Platform API",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "build": "tsc",
+    "prepare": "npm run build",
     "lint": "eslint --ext .js,.ts -f visualstudio .",
     "lint:fix": "npm run lint -- --fix",
     "lint:ci": "npm run lint:fix -- --quiet",
@@ -13,11 +17,10 @@
     "lint:prettier:check": "prettier --check '**/*.{ts,js}'"
   },
   "dependencies": {
-    "@nylas/nylas-js": "^0.1.0"
+    "@nylas/nylas-js": "^0.2.0"
   },
   "devDependencies": {
     "typescript": "^4.7.4",
-    "react": "^18.2.0",
     "@types/react": "^18.0.12",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "eslint": "^8.20.0",
@@ -25,6 +28,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "prettier": "^2.7.1"
+  },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0"
   },
   "repository": {
     "type": "git",
